--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,9 +33,8 @@ jobs:
             - name: Run test PHPUnit
               run: docker-compose --file docker-compose.test.yml run phpunit
 
-    # Push image to GitHub Packages.
-    # See also https://docs.docker.com/docker-hub/builds/
-    push:
+    # build debian based container
+    debian:
         needs: test
 
         runs-on: ubuntu-20.04
@@ -53,11 +52,39 @@ jobs:
                   echo VERSION=$VERSION
                   echo "::set-env name=VERSION::$VERSION"
 
-            - name: Build Debian image
+            - name: Build container
               run: docker build . --build-arg=COMMIT=${{ github.sha }} --build-arg=BRANCH=${{ env.VERSION }} --file docker/debian/Dockerfile --tag $DEFAULT_IMAGE_NAME:${{ env.VERSION }}
 
             - name: Log into registry
               run: echo "${{ secrets.DOCKER_HUB }}" | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
 
-            - name: Push containers
+            - name: Push container
               run: docker push $DEFAULT_IMAGE_NAME:${{ env.VERSION }}
+
+    # build alpine based container
+    alpine:
+        needs: test
+
+        runs-on: ubuntu-20.04
+        if: github.event_name == 'push'
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Definition version
+              run: |
+                  VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+                  [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+                  [ "$VERSION" == "master" ] && VERSION=latest
+
+                  echo VERSION=$VERSION
+                  echo "::set-env name=VERSION::$VERSION"
+
+            - name: Build container
+              run: docker build . --build-arg=COMMIT=${{ github.sha }} --build-arg=BRANCH=${{ env.VERSION }} --file docker/debian/Dockerfile --tag $DEFAULT_IMAGE_NAME:${{ env.VERSION }}-alpine
+
+            - name: Log into registry
+              run: echo "${{ secrets.DOCKER_HUB }}" | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+
+            - name: Push container
+              run: docker push $DEFAULT_IMAGE_NAME:${{ env.VERSION }}-alpine
