--- a/composer.json
+++ b/composer.json
@@ -12,30 +12,30 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
-        "slim/twig-view": "^2.4",
+        "slim/slim": "^3.12.2",
+        "slim/php-view": "^2.2.1",
+        "slim/twig-view": "^2.5.1",
         "slim/http-cache": "^0.4.0",
-        "doctrine/orm": "^2",
+        "doctrine/orm": "^2.7.3",
         "alksily/support": "^1.2",
         "twig/twig": "2.12.1",
         "twig/extensions": "^1.5",
         "twig/intl-extra": "3.x-dev",
-        "phive/twig-extensions-deferred": "^2.0",
-        "ramsey/uuid": "^3.8",
-        "ramsey/uuid-doctrine": "^1.5",
+        "phive/twig-extensions-deferred": "^2.0.3",
+        "ramsey/uuid": "^3.9.3",
+        "ramsey/uuid-doctrine": "^1.6",
         "bhaktaraz/php-rss-generator": "dev-master",
-        "phpmailer/phpmailer": "^6.1",
-        "pragmarx/google2fa": "^3.0",
-        "phpoffice/phpspreadsheet": "^1.11",
-        "bacon/bacon-qr-code": "^1.0",
-        "monolog/monolog": "^1.17",
+        "phpmailer/phpmailer": "^v6.1.6",
+        "pragmarx/google2fa": "^3.0.3",
+        "phpoffice/phpspreadsheet": "^1.14",
+        "bacon/bacon-qr-code": "^1.0.3",
+        "monolog/monolog": "^1.25.4",
         "runcmf/runtracy": "^0.2.10",
-        "nochso/html-compress-twig": "^2.0",
-        "illuminate/collections": "^8.5"
+        "nochso/html-compress-twig": "^2.0.1",
+        "illuminate/collections": "^8.5.0"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.9",
+        "fzaninotto/faker": "@stable",
         "friendsofphp/php-cs-fixer": "@stable",
         "phpunit/phpunit": "@stable"
     },
