--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
+        "ext-yaml": "*",
         "slim/slim": "^3.12.2",
         "slim/php-view": "^2.2.1",
         "slim/twig-view": "^2.5.1",
