--- a/docker/alpine/Dockerfile
+++ b/docker/alpine/Dockerfile
@@ -26,12 +26,13 @@ RUN set -x \
         gettext-dev \
         libmcrypt-dev \
         oniguruma-dev \
+        yaml-dev \
         imagemagick-dev \
         imagemagick \
-    && pecl install imagick \
+    && pecl install imagick yaml \
     && docker-php-ext-configure gd \
     && docker-php-ext-install -j$(nproc) gettext zip gd pdo_mysql mbstring \
-    && docker-php-ext-enable opcache.so imagick \
+    && docker-php-ext-enable opcache.so imagick yaml \
     && docker-php-source delete \
     && php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php composer-setup.php --quiet --install-dir=/usr/bin --filename=composer \
@@ -58,6 +59,7 @@ ADD var ${PLATFORM_HOME}/var
 
 # Final step
 RUN set -x \
+    && apk del --purge .build-deps \
     && rm -rf /var/cache/apk/* \
     && chmod -R 0777 ${PLATFORM_HOME}/plugin \
     && chmod -R 0777 ${PLATFORM_HOME}/public/resource \
