increase memory usage

--- a/docker/php.ini
+++ b/docker/php.ini
@@ -5,3 +5,6 @@ upload_max_filesize = 40M
 
 ; Must be greater than or equal to upload_max_filesize
 post_max_size = 40M
+
+; Memory usage
+memory_limit = 256M
