update task worker for run parallels work
add task name to worker call

--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -63,6 +63,7 @@ COPY composer.lock ${PLATFORM_HOME}/composer.lock
 RUN composer install ${NO_DEV} --no-suggest --no-progress
 
 # Copy platform
+ADD bin ${PLATFORM_HOME}/bin
 ADD config ${PLATFORM_HOME}/config
 ADD plugin ${PLATFORM_HOME}/plugin
 ADD public ${PLATFORM_HOME}/public
