--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,6 +10,7 @@ services:
             - DEBUG=0
         command: vendor/bin/php-cs-fixer fix --config=.php_cs.dist
         volumes:
+            - ./bin:/var/container/bin:rw
             - ./config:/var/container/config:rw
             - ./plugin:/var/container/plugin:rw
             - ./public:/var/container/public:rw
@@ -32,6 +33,7 @@ services:
             - DEBUG=0
         command: vendor/bin/phpunit --color=always --configuration phpunit.xml
         volumes:
+            - ./bin:/var/container/bin:rw
             - ./config:/var/container/config:rw
             - ./plugin:/var/container/plugin:rw
             - ./public:/var/container/public:rw
