add doctrine migration

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "slim/twig-view": "^2.5.1",
         "slim/http-cache": "^0.4.0",
         "doctrine/orm": "^2.8.1",
+        "doctrine/migrations": "^3.1",
         "alksily/support": "^1.2.1",
         "twig/twig": "2.12.1",
         "twig/extensions": "^1.5.4",
@@ -33,7 +34,8 @@
         "monolog/monolog": "^1.25.5",
         "runcmf/runtracy": "^0.2.10",
         "nochso/html-compress-twig": "^2.0.1",
-        "illuminate/collections": "^8.17.2"
+        "illuminate/collections": "^8.17.2",
+        "a-gallyamov/commerceml2": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "@stable",
