--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,6 +20,7 @@ services:
             - ./var:/var/container/var:rw
             - ./var/upload:/var/container/public/uploads:rw
             - ./.php_cs.dist:/var/container/.php_cs.dist:ro
+            - ./migrations.json:/var/container/migrations.json:ro
             - ./composer.json:/var/container/composer.json:rw
             - ./composer.lock:/var/container/composer.lock:rw
             - ./phpunit.xml:/var/container/phpunit.xml:ro
