--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
             - ./var/upload:/var/container/public/uploads:rw
             - ./vendor:/var/container/vendor:rw
             - ./.php_cs.dist:/var/container/.php_cs.dist:ro
+            - ./migrations.json:/var/container/migrations.json:ro
             - ./composer.json:/var/container/composer.json:rw
             - ./composer.lock:/var/container/composer.lock:rw
             - ./phpunit.xml:/var/container/phpunit.xml:ro
