--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "0x12f/cms",
-    "description": "Content Management System structure by 0x12f",
+    "name": "getwebspace/platform",
+    "description": "Content Management System structure",
     "authors": [
         {
             "name": "Aleksey Ilyin",
