--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: .
             dockerfile: docker/debian/Dockerfile
-        image: 0x12f/platform:test
+        image: getwebspace/platform:test
         environment:
             - DEBUG=0
         command: vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php
@@ -29,7 +29,7 @@ services:
         build:
             context: .
             dockerfile: docker/debian/Dockerfile
-        image: 0x12f/platform:test
+        image: getwebspace/platform:test
         environment:
             - DEBUG=0
         command: vendor/bin/phpunit --color=always --configuration phpunit.xml
