--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -67,6 +67,7 @@ RUN composer install ${NO_DEV} --no-suggest --no-progress
 ADD bin ${PLATFORM_HOME}/bin
 ADD config ${PLATFORM_HOME}/config
 ADD plugin ${PLATFORM_HOME}/plugin
+ADD locale ${PLATFORM_HOME}/locale
 ADD public ${PLATFORM_HOME}/public
 ADD src ${PLATFORM_HOME}/src
 ADD theme ${PLATFORM_HOME}/theme
@@ -78,6 +79,7 @@ RUN set -x \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && rm /var/log/lastlog /var/log/faillog \
+    && chmod -R 0777 ${PLATFORM_HOME}/locale \
     && chmod -R 0777 ${PLATFORM_HOME}/plugin \
     && chmod -R 0777 ${PLATFORM_HOME}/public/resource \
     && chmod -R 0777 ${PLATFORM_HOME}/public/uploads \
