--- a/composer.json
+++ b/composer.json
@@ -13,28 +13,29 @@
         "php": ">=7.4",
         "ext-json": "*",
         "ext-yaml": "*",
-        "slim/slim": "^3.12.3",
-        "slim/php-view": "^2.2.1",
-        "slim/twig-view": "^2.5.1",
-        "slim/http-cache": "^0.4.0",
-        "doctrine/orm": "^2.8.1",
+        "slim/slim": "^3.12",
+        "slim/php-view": "^2.2",
+        "slim/twig-view": "^2.5",
+        "slim/http-cache": "^0.4",
+        "doctrine/orm": "^2.8",
         "doctrine/migrations": "^3.1",
-        "alksily/support": "^1.2.1",
-        "twig/twig": "2.12.1",
-        "twig/extensions": "^1.5.4",
+        "alksily/support": "^1.2",
+        "twig/twig": "^2.12",
+        "twig/extensions": "^1.5",
         "twig/intl-extra": "3.x-dev",
-        "phive/twig-extensions-deferred": "^2.0.3",
-        "ramsey/uuid": "^3.9.3",
+        "phive/twig-extensions-deferred": "^2.0",
+        "ramsey/uuid": "^3.9",
         "ramsey/uuid-doctrine": "^1.6",
         "bhaktaraz/php-rss-generator": "dev-master",
-        "phpmailer/phpmailer": "^v6.5.0",
-        "pragmarx/google2fa": "^3.0.3",
-        "phpoffice/phpspreadsheet": "^1.15.0",
-        "bacon/bacon-qr-code": "^1.0.3",
-        "monolog/monolog": "^1.25.5",
-        "runcmf/runtracy": "^0.2.10",
-        "nochso/html-compress-twig": "^2.0.1",
-        "illuminate/collections": "^8.17.2"
+        "phpmailer/phpmailer": "^v6.5",
+        "pragmarx/google2fa": "^3.0",
+        "phpoffice/phpspreadsheet": "^1.15",
+        "bacon/bacon-qr-code": "^1.0",
+        "monolog/monolog": "^1.25",
+        "runcmf/runtracy": "^0.2",
+        "nochso/html-compress-twig": "^2.0",
+        "illuminate/collections": "^8.17",
+        "symfony/cache": "5.2"
     },
     "require-dev": {
         "fzaninotto/faker": "@stable",
