add soap php ext

--- a/docker/debian-sqlsrv/Dockerfile
+++ b/docker/debian-sqlsrv/Dockerfile
@@ -51,7 +51,7 @@ RUN set -x \
     && nginx -V \
     && pecl install -f imagick yaml sqlsrv pdo_sqlsrv \
     && docker-php-ext-configure gd \
-    && docker-php-ext-install -j$(nproc) gettext zip gd pdo_mysql \
+    && docker-php-ext-install -j$(nproc) gettext zip gd pdo_mysql soap \
     && docker-php-ext-enable opcache.so imagick sqlsrv pdo_sqlsrv yaml \
     && docker-php-source delete \
     && php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
