--- a/docker/debian/nginx.conf
+++ b/docker/debian/nginx.conf
@@ -65,8 +65,8 @@ http {
         server_name _;
         sendfile off;
 
-        error_log  /dev/stdout info;
-        access_log /dev/stdout;
+        error_log  /var/container/var/log/nginx.error.log info;
+        access_log /var/container/var/log/nginx.access.log;
 
         expires     $expires;
 
