fix chmod (final)

--- a/docker/debian-sqlsrv/nginx.conf
+++ b/docker/debian-sqlsrv/nginx.conf
@@ -1,3 +1,4 @@
+user www-data www-data;
 worker_processes 1;
 
 events {
@@ -81,12 +82,6 @@ http {
             set   $query $1;
             try_files /uploads$query /index.php;
         }
-
-        # remove this rule in production mode
-        #location /robots.txt {
-        #    add_header  Content-Type text/plain;
-        #    return      200 "User-agent: *\nDisallow: /\n";
-        #}
 
         location ~ \.php$ {
             fastcgi_pass                127.0.0.1:9000;
