add services in container, refactor code

--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
             "App\\": "src/"
         },
         "files": [
+            "config/vars.php",
             "src/helpers.php"
         ]
     },
