--- a/composer.json
+++ b/composer.json
@@ -15,30 +15,30 @@
         "ext-json": "*",
         "ext-yaml": "*",
         "ext-soap": "*",
-        "slim/slim": "^4.9",
+        "slim/slim": "^4.10.0",
         "slim/psr7": "^1.5",
-        "slim/twig-view": "^3.3",
-        "slim/http-cache": "^1.1",
-        "php-di/php-di": "^6.3",
-        "doctrine/orm": "^2.11",
-        "doctrine/migrations": "^3.4",
+        "slim/twig-view": "^3.3.0",
+        "slim/http-cache": "^1.1.0",
+        "php-di/php-di": "^6.4.0",
+        "doctrine/orm": "^2.12.2",
+        "doctrine/migrations": "^3.5.1",
         "alksily/support": "^1.3.1",
-        "twig/twig": "^3.3",
-        "twig/intl-extra": "^3.3",
-        "ramsey/uuid": "^4.2",
-        "ramsey/uuid-doctrine": "^1.8.0",
-        "phpmailer/phpmailer": "^v6.0",
-        "sendpulse/rest-api": "^1.0",
-        "pragmarx/google2fa": "^v4.0",
-        "phpoffice/phpspreadsheet": "^1.21",
-        "bacon/bacon-qr-code": "^2.0",
-        "monolog/monolog": "^2.3",
-        "illuminate/collections": "^v8.81",
-        "symfony/cache": "^6.0",
-        "voku/html-compress-twig": "^4.0",
-        "rybakit/twig-deferred-extension": "^3.0",
-        "twig/string-extra": "^3.3",
-        "symfony/var-dumper": "^6.0",
+        "twig/twig": "^v3.4.1",
+        "twig/intl-extra": "^v3.4.0",
+        "twig/string-extra": "^v3.4.0",
+        "ramsey/uuid": "^4.3.1",
+        "ramsey/uuid-doctrine": "^1.8.1",
+        "phpmailer/phpmailer": "^v6.6.0",
+        "sendpulse/rest-api": "^1.0.26",
+        "pragmarx/google2fa": "^v4.0.2",
+        "phpoffice/phpspreadsheet": "^1.23.0",
+        "bacon/bacon-qr-code": "^2.0.7",
+        "monolog/monolog": "^2.6.0",
+        "illuminate/collections": "^v8.83.15",
+        "symfony/cache": "^v6.1.0",
+        "symfony/var-dumper": "^v6.1.0",
+        "voku/html-compress-twig": "^4.0.2",
+        "rybakit/twig-deferred-extension": "^v3.0.1",
         "bhaktaraz/php-rss-generator": "dev-master"
     },
     "require-dev": {
