--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "authors": [
         {
             "name": "Aleksey Ilyin",
-            "email": "alksily@icloud.com",
-            "homepage": "https://www.facebook.com/aleksey.ily",
+            "email": "alksily@getwebspace.org",
+            "homepage": "https://alksily.getwebspace.org",
             "role": "Developer"
         }
     ],
