--- a/docker/debian/nginx.conf
+++ b/docker/debian/nginx.conf
@@ -19,6 +19,8 @@ http {
     tcp_nodelay on;
     send_timeout 2;
     types_hash_max_size 2048;
+    client_body_buffer_size 20K;
+    client_header_buffer_size 4k;
     client_max_body_size 32m;
     client_body_timeout 10;
     reset_timedout_connection on;
