--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -55,6 +55,7 @@ jobs:
               with:
                 context: .
                 push: true
+                file: docker/debian/Dockerfile
                 tags: ${{ steps.meta.outputs.tags }}
                 labels: ${{ steps.meta.outputs.labels }}
 
@@ -84,5 +85,10 @@ jobs:
               with:
                   context: .
                   push: true
+                  file: docker/debian-sqlsrv/Dockerfile
                   tags: ${{ steps.meta.outputs.tags }}-sqlsrv
                   labels: ${{ steps.meta.outputs.labels }}
+                  build-args: |
+                      BRANCH: ${{ $VERSION }}
+                      COMMIT: ${{ github.sha }}
+
