--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,16 +18,16 @@ jobs:
         runs-on: ubuntu-latest
         name: Testing
         steps:
-            - uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
 
-            - name: Build test version
-              run: docker-compose --file docker-compose.test.yml build --build-arg=NO_DEV=""
+            -   name: Build test version
+                run: docker-compose --file docker-compose.test.yml build --build-arg=NO_DEV=""
 
-            - name: Run test PHP_CS
-              run: docker-compose --file docker-compose.test.yml run phpcs
+            -   name: Run test PHP_CS
+                run: docker-compose --file docker-compose.test.yml run phpcs
 
-            - name: Run test PHPUnit
-              run: docker-compose --file docker-compose.test.yml run phpunit
+            -   name: Run test PHPUnit
+                run: docker-compose --file docker-compose.test.yml run phpunit
 
     # build debian based container
     debian:
@@ -35,33 +35,32 @@ jobs:
         runs-on: ubuntu-latest
         name: Build base container
         steps:
-            - name: Check out the repo
-              uses: actions/checkout@v3
+            -   name: Check out the repo
+                uses: actions/checkout@v3
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-              with:
-                username: ${{ secrets.DOCKER_HUB_USERNAME }}
-                password: ${{ secrets.DOCKER_HUB }}
+            -   name: Log in to Docker Hub
+                uses: docker/login-action@2.0.0
+                with:
+                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                    password: ${{ secrets.DOCKER_HUB }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-              with:
-                images: getwebspace/platform
+            -   name: Extract metadata (tags, labels) for Docker
+                id: meta
+                uses: docker/metadata-action@4.0.1
+                with:
+                    images: getwebspace/platform
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-              with:
-                context: .
-                push: true
-                file: docker/debian/Dockerfile
-                tags: ${{ steps.meta.outputs.tags }}
-                labels: ${{ steps.meta.outputs.labels }}
-                build-args: |
-                    BRANCH: ${GITHUB_REF##*/}
-                    COMMIT: ${{ github.sha }}
-
+            -   name: Build and push Docker image
+                uses: docker/build-push-action@v3.1.1
+                with:
+                    context: .
+                    push: true
+                    file: docker/debian/Dockerfile
+                    tags: ${{ steps.meta.outputs.tags }}
+                    labels: ${{ steps.meta.outputs.labels }}
+                    build-args: |
+                        BRANCH: {{branch}}
+                        COMMIT: {{sha}}
 
     # build debian based container WITH sqlsrv PDO driver
     debian-sqlsrv:
@@ -69,30 +68,29 @@ jobs:
         runs-on: ubuntu-latest
         name: Build sqlsrv container
         steps:
-            - name: Check out the repo
-              uses: actions/checkout@v3
+            -   name: Check out the repo
+                uses: actions/checkout@v3
 
-            - name: Log in to Docker Hub
-              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-              with:
-                  username: ${{ secrets.DOCKER_HUB_USERNAME }}
-                  password: ${{ secrets.DOCKER_HUB }}
+            -   name: Log in to Docker Hub
+                uses: docker/login-action@2.0.0
+                with:
+                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                    password: ${{ secrets.DOCKER_HUB }}
 
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-              with:
-                  images: getwebspace/platform
+            -   name: Extract metadata (tags, labels) for Docker
+                id: meta
+                uses: docker/metadata-action@4.0.1
+                with:
+                    images: getwebspace/platform
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-              with:
-                  context: .
-                  push: true
-                  file: docker/debian-sqlsrv/Dockerfile
-                  tags: ${{ steps.meta.outputs.tags }}-sqlsrv
-                  labels: ${{ steps.meta.outputs.labels }}
-                  build-args: |
-                      BRANCH: ${GITHUB_REF##*/}
-                      COMMIT: ${{ github.sha }}
-
+            -   name: Build and push Docker image
+                uses: docker/build-push-action@v3.1.1
+                with:
+                    context: .
+                    push: true
+                    file: docker/debian-sqlsrv/Dockerfile
+                    tags: ${{ steps.meta.outputs.tags }}-sqlsrv
+                    labels: ${{ steps.meta.outputs.labels }}
+                    build-args: |
+                        BRANCH: {{branch}}
+                        COMMIT: {{sha}}
