--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -39,19 +39,19 @@ jobs:
                 uses: actions/checkout@v3
 
             -   name: Log in to Docker Hub
-                uses: docker/login-action@2.0.0
+                uses: docker/login-action@v2
                 with:
                     username: ${{ secrets.DOCKER_HUB_USERNAME }}
                     password: ${{ secrets.DOCKER_HUB }}
 
             -   name: Extract metadata (tags, labels) for Docker
                 id: meta
-                uses: docker/metadata-action@4.0.1
+                uses: docker/metadata-action@v4
                 with:
                     images: getwebspace/platform
 
             -   name: Build and push Docker image
-                uses: docker/build-push-action@v3.1.1
+                uses: docker/build-push-action@v3
                 with:
                     context: .
                     push: true
@@ -72,19 +72,19 @@ jobs:
                 uses: actions/checkout@v3
 
             -   name: Log in to Docker Hub
-                uses: docker/login-action@2.0.0
+                uses: docker/login-action@v2
                 with:
                     username: ${{ secrets.DOCKER_HUB_USERNAME }}
                     password: ${{ secrets.DOCKER_HUB }}
 
             -   name: Extract metadata (tags, labels) for Docker
                 id: meta
-                uses: docker/metadata-action@4.0.1
+                uses: docker/metadata-action@v4
                 with:
                     images: getwebspace/platform
 
             -   name: Build and push Docker image
-                uses: docker/build-push-action@v3.1.1
+                uses: docker/build-push-action@v3
                 with:
                     context: .
                     push: true
