--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,6 +38,9 @@ jobs:
             -   name: Check out the repo
                 uses: actions/checkout@v3
 
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v2
+
             -   name: Log in to Docker Hub
                 uses: docker/login-action@v2
                 with:
@@ -56,11 +59,13 @@ jobs:
                     context: .
                     push: true
                     file: docker/debian/Dockerfile
+                    cache-from: type=gha
+                    cache-to: type=gha,mode=max
                     tags: ${{ steps.meta.outputs.tags }}
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
-                        BRANCH: {{branch}}
-                        COMMIT: {{sha}}
+                        BRANCH={{branch}}
+                        COMMIT={{sha}}
 
     # build debian based container WITH sqlsrv PDO driver
     debian-sqlsrv:
@@ -70,6 +75,9 @@ jobs:
         steps:
             -   name: Check out the repo
                 uses: actions/checkout@v3
+
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v2
 
             -   name: Log in to Docker Hub
                 uses: docker/login-action@v2
@@ -89,8 +97,10 @@ jobs:
                     context: .
                     push: true
                     file: docker/debian-sqlsrv/Dockerfile
+                    cache-from: type=gha
+                    cache-to: type=gha,mode=max
                     tags: ${{ steps.meta.outputs.tags }}-sqlsrv
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
-                        BRANCH: {{branch}}
-                        COMMIT: {{sha}}
+                        BRANCH={{branch}}
+                        COMMIT={{sha}}
