--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,6 +20,9 @@ jobs:
         steps:
             -   uses: actions/checkout@v3
 
+            -   name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v2
+
             -   name: Build test version
                 run: docker-compose --file docker-compose.test.yml build --build-arg=NO_DEV=""
 
@@ -59,8 +62,6 @@ jobs:
                     context: .
                     push: true
                     file: docker/debian/Dockerfile
-                    cache-from: type=gha
-                    cache-to: type=gha,mode=max
                     tags: ${{ steps.meta.outputs.tags }}
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
@@ -97,8 +98,6 @@ jobs:
                     context: .
                     push: true
                     file: docker/debian-sqlsrv/Dockerfile
-                    cache-from: type=gha
-                    cache-to: type=gha,mode=max
                     tags: ${{ steps.meta.outputs.tags }}-sqlsrv
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
