--- a/docker/debian/Dockerfile.sqlsrv
+++ b/docker/debian/Dockerfile.sqlsrv
@@ -75,12 +75,12 @@ FROM build as platform
 
 RUN set -x \
     && curl http://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
-    && curl http://packages.microsoft.com/config/debian/10/prod.list > /etc/apt/sources.list.d/mssql-release.list \
+    && curl http://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list \
     && apt-get update \
     && ACCEPT_EULA=Y apt-get install --no-install-recommends -y \
         msodbcsql17 \
         unixodbc-dev \
-    && pecl install -f sqlsrv-5.10.0beta2 pdo_sqlsrv-5.10.0beta2 \
+    && pecl install -f sqlsrv pdo_sqlsrv \
     && docker-php-ext-enable sqlsrv pdo_sqlsrv \
     && docker-php-source delete
 
