--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.20.0",
         "friendsofphp/php-cs-fixer": "^3.5",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
