--- a/docker/rootfs/etc/nginx/nginx.conf
+++ b/docker/rootfs/etc/nginx/nginx.conf
@@ -1,5 +1,5 @@
-user www-data www-data;
 worker_processes 1;
+pid /run/nginx.pid;
 
 events {
     use epoll;
@@ -11,7 +11,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    keepalive_timeout 30;
+    keepalive_timeout 65;
     keepalive_requests 100;
 
     sendfile on;
@@ -19,9 +19,9 @@ http {
     tcp_nodelay on;
     send_timeout 2;
     types_hash_max_size 2048;
-    client_body_buffer_size 20K;
     client_header_buffer_size 4k;
-    client_max_body_size 32m;
+    client_max_body_size ${client_max_body_size};
+    client_body_buffer_size 128k;
     client_body_timeout 10;
     reset_timedout_connection on;
 
@@ -85,6 +85,7 @@ http {
             try_files /uploads$query /index.php;
         }
 
+        # Pass the PHP scripts to PHP-FPM listening on 127.0.0.1:9000
         location ~ \.php$ {
             fastcgi_pass                127.0.0.1:9000;
             fastcgi_index               index.php;
