--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
             -   name: Run test PHPUnit
                 run: docker-compose --file docker-compose.test.yml run phpunit
 
-    # build debian based container
+    # build alpine
     debian:
         needs: test
         runs-on: ubuntu-latest
@@ -55,44 +55,9 @@ jobs:
                 with:
                     context: .
                     push: true
-                    file: docker/debian/Dockerfile
+                    file: docker/Dockerfile
                     tags: ${{ steps.meta.outputs.tags }}
                     labels: ${{ steps.meta.outputs.labels }}
                     build-args: |
-                        BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-                        COMMIT=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
-
-    # build debian based container WITH sqlsrv PDO driver
-    debian-sqlsrv:
-        needs: test
-        runs-on: ubuntu-latest
-        name: Build sqlsrv container
-        steps:
-            -   name: Check out the repo
-                uses: actions/checkout@v3
-
-            -   name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v2
-
-            -   name: Log in to Docker Hub
-                uses: docker/login-action@v2
-                with:
-                    username: ${{ secrets.DOCKER_HUB_USERNAME }}
-                    password: ${{ secrets.DOCKER_HUB }}
-
-            -   name: Extract metadata (tags, labels) for Docker
-                id: meta
-                uses: docker/metadata-action@v4
-                with:
-                    images: getwebspace/platform
-
-            -   name: Build and push Docker image
-                uses: docker/build-push-action@v3
-                with:
-                    context: .
-                    push: true
-                    file: docker/debian/Dockerfile.sqlsrv
-                    tags: ${{ steps.meta.outputs.tags }}-sqlsrv
-                    build-args: |
-                        BRANCH=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+                        VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
                         COMMIT=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.revision'] }}
